--- a/app/src/main/res/layout/edit_dropdown_menu__item.xml
+++ b/app/src/main/res/layout/edit_dropdown_menu__item.xml
@@ -4,13 +4,20 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:orientation="vertical">
+    <TextView
+            android:id="@+id/dropdown_item_id"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"/>
     <ImageView
+            android:id="@+id/dropdown_item_img"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_gravity="center"
             android:layout_margin="10dp"
             android:src="@drawable/ic_edit_consume"/>
     <TextView
+            android:id="@+id/dropdown_item_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
