--- a/app/src/main/res/layout/edit_dropdown_menu.xml
+++ b/app/src/main/res/layout/edit_dropdown_menu.xml
@@ -3,7 +3,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_margin="15dp"
         android:layout_gravity="top"
         android:background="@drawable/border_all_radian">
     <TextView
@@ -12,7 +11,6 @@
             android:gravity="center"
             android:textColor="#000000"
             android:layout_marginTop="20dp"
-            android:layout_marginBottom="10dp"
             android:textSize="20dp"
             android:text="选择指出类型"/>
     <GridLayout
@@ -25,5 +23,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
     </GridLayout>
-
+    <TextView
+            android:id="@+id/dropdown_cancel"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:background="@drawable/border_top"
+            android:gravity="center"
+            android:textSize="20dp"
+            android:text="取消"/>
 </LinearLayout>
