--- a/app/src/main/res/layout/history_bill_item.xml
+++ b/app/src/main/res/layout/history_bill_item.xml
@@ -3,14 +3,39 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-    <TextView
-            android:id="@+id/bill_item_consumptionDate"
+    <LinearLayout
+            android:id="@+id/bill_item_date_layout"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
-            android:text="9月2日"
-            android:gravity="center_vertical"
-            android:background="@drawable/border_bottom"/>
+            android:background="@drawable/border_bottom">
+        <TextView
+                android:id="@+id/bill_item_consumptionDate"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:text="9月2日"
+                android:gravity="center_vertical"
+                />
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:text="共计:"/>
+        <TextView
+                android:id="@+id/bill_item_day_total"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:layout_marginRight="10dp"
+                android:text="0"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:layout_marginRight="20dp"
+                android:text="元"/>
+    </LinearLayout>
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
@@ -37,7 +62,10 @@
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
-                        android:text="消费-xxxx"/>
+                        android:ellipsize="end"
+                        android:maxEms="7"
+                        android:singleLine="true"
+                        android:text="消费"/>
                 <TextView
                         android:id="@+id/bill_item_amount"
                         android:layout_width="wrap_content"
