--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -15,5 +15,9 @@
             android:id="@+id/navigation_history"
             android:icon="@drawable/ic_notifications_black_24dp"
             android:title="@string/title_notifications" />
+    <item
+            android:id="@+id/setting"
+            android:icon="@drawable/ic_setting"
+            android:title="@string/title_notifications"/>
 
 </menu>
