--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,195 +1,250 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:background="@color/background_color"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginBottom="10dp"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            tools:layout_editor_absoluteX="0dp"
+            tools:layout_editor_absoluteY="0dp">
+
         <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/border_bottom">
+
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:gravity="center_vertical"
-                    android:text="快速选择:"/>
+                    android:text="快速选择:" />
+
             <RadioGroup
                     android:id="@+id/home_radio_group"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
+
                 <RadioButton
                         android:id="@+id/home_radio_year"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
 
-                        android:text="前一年"/>
+                        android:text="前一年" />
+
                 <RadioButton
                         android:id="@+id/home_radio_month"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="前一个月"/>
+                        android:text="前一个月" />
+
                 <RadioButton
                         android:id="@+id/home_radio_day"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="前一天"/>
+                        android:text="前一天" />
+
                 <RadioButton
                         android:id="@+id/home_radio_customize"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="自定义"/>
+                        android:text="自定义" />
             </RadioGroup>
         </LinearLayout>
+
         <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/border_bottom">
+
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:gravity="center_vertical"
-                    android:text="所选时间段:"/>
+                    android:text="所选时间段:" />
+
             <EditText
                     android:id="@+id/home_start_date"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:focusable="false"
-                    android:hint="开始时间"/>
+                    android:hint="开始时间" />
+
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:gravity="center_vertical"
-                    android:text="到"/>
+                    android:text="到" />
+
             <EditText
                     android:id="@+id/home_end_date"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:focusable="false"
-                    android:hint="结束时间"/>
+                    android:hint="结束时间" />
         </LinearLayout>
+
         <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:background="@drawable/border_bottom">
+                android:background="@drawable/border_bottom"
+                android:orientation="vertical">
+
             <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
+
                 <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:gravity="center_vertical"
-                        android:text="进度设置："/>
+                        android:text="进度设置：" />
+
                 <EditText
                         android:id="@+id/home_total_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:inputType="numberDecimal"
-                        android:hint="预期金额"/>
+                        android:hint="预期金额"
+                        android:inputType="numberDecimal" />
+
                 <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:gravity="center_vertical"
-                        android:text="预期时间:"/>
+                        android:text="预期时间:" />
+
                 <EditText
                         android:id="@+id/home_expected_date"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:focusable="false"/>
+                        android:focusable="false" />
             </LinearLayout>
+
             <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:minWidth="150dp"
-                    android:layout_gravity="right">
+                    android:layout_gravity="right"
+                    android:minWidth="150dp">
+
                 <ProgressBar
                         style="@android:style/Widget.ProgressBar.Horizontal"
                         android:layout_width="10dp"
                         android:layout_height="wrap_content"
                         android:max="1"
-                        android:progress="0"/>
+                        android:progress="0" />
+
                 <TextView
                         android:id="@+id/home_balance_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:focusable="false"
-                        android:text="：可用金额："/>
+                        android:text="：可用金额：" />
+
                 <TextView
                         android:id="@+id/home_balance_number"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:focusable="false"
-                        android:text="0"/>
+                        android:text="0" />
+
                 <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text=" 元"/>
+                        android:text=" 元" />
             </LinearLayout>
+
             <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:minWidth="150dp"
-                    android:layout_gravity="right">
-            <ProgressBar
-                    style="@android:style/Widget.ProgressBar.Horizontal"
-                    android:layout_width="10dp"
-                    android:layout_height="wrap_content"
-                    android:max="1"
-                    android:progress="1"
-                    android:layout_gravity="right"/>
+                    android:layout_gravity="right"
+                    android:minWidth="150dp">
+
+                <ProgressBar
+                        style="@android:style/Widget.ProgressBar.Horizontal"
+                        android:layout_width="10dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="right"
+                        android:max="1"
+                        android:progress="1" />
+
                 <TextView
                         android:id="@+id/home_spend_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:focusable="false"
-                        android:text="：已用金额："/>
+                        android:text="：已用金额：" />
+
                 <TextView
                         android:id="@+id/home_spend_number"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:focusable="false"
-                        android:text="0"/>
+                        android:text="0" />
+
                 <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:focusable="false"
-                        android:text=" 元"/>
-            </LinearLayout>/
+                        android:text=" 元" />
+            </LinearLayout>
+            /
+
             <com.example.bookkeeping.chart.MyProgressBar
-                    style="@android:style/Widget.ProgressBar.Horizontal"
                     android:id="@+id/home_progressBar"
+                    style="@android:style/Widget.ProgressBar.Horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
                     android:max="100"
-                    android:progress="0"
-                    android:layout_margin="10dp"/>
+                    android:progress="0" />
         </LinearLayout>
+
         <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:background="@drawable/border_bottom">
+
             <com.github.mikephil.charting.charts.PieChart
                     android:id="@+id/home_chart_pie"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"/>
+                    android:layout_height="match_parent" />
         </LinearLayout>
+
         <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1">
+
             <com.github.mikephil.charting.charts.BarChart
                     android:id="@+id/home_chart_bar"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:visibility="gone"/>
+                    android:visibility="gone" />
         </LinearLayout>
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/bill_add_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:scaleType="fitXY"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"
+                android:layout_margin="16dp"
+                android:src="@drawable/ic_add"
+                app:backgroundTint="#33b5e7"
+                app:elevation="5dp"
+                app:pressedTranslationZ="12dp"
+                app:fabSize="normal"
+                app:borderWidth="0dp"
+                app:rippleColor="#cccccc"/>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
