--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -5,19 +5,13 @@
             android:id="@+id/navigation_home"
             android:icon="@drawable/ic_home_black_24dp"
             android:title="@string/title_home" />
-
-    <item
-            android:id="@+id/navigation_edit"
-            android:icon="@drawable/ic_dashboard_black_24dp"
-            android:title="@string/title_dashboard" />
-
     <item
             android:id="@+id/navigation_history"
-            android:icon="@drawable/ic_notifications_black_24dp"
+            android:icon="@drawable/ic_history"
             android:title="@string/title_notifications" />
     <item
-            android:id="@+id/setting"
+            android:id="@+id/navigation_setting"
             android:icon="@drawable/ic_setting"
-            android:title="@string/title_notifications"/>
+            android:title="@string/title_setting"/>
 
 </menu>
