--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,19 +7,17 @@
 
     <fragment
             android:id="@+id/navigation_home"
-            android:name="com.example.bookkeeping.ui.home.HomeFragment"
+            android:name="com.example.bookkeeping.ui.HomeFragment"
             android:label="@string/title_home"
             tools:layout="@layout/fragment_home" />
-
-    <fragment
-            android:id="@+id/navigation_edit"
-            android:name="com.example.bookkeeping.ui.edit.EditFragment"
-            android:label="@string/title_dashboard"
-            tools:layout="@layout/fragment_edit" />
-
     <fragment
             android:id="@+id/navigation_history"
-            android:name="com.example.bookkeeping.ui.history.HistoryFragment"
+            android:name="com.example.bookkeeping.ui.HistoryFragment"
             android:label="@string/title_notifications"
             tools:layout="@layout/fragment_history" />
+    <fragment
+            android:id="@+id/navigation_setting"
+            android:name="com.example.bookkeeping.ui.SettingFragment"
+            android:label="@string/title_setting"
+            tools:layout="@layout/fragment_edit" />
 </navigation>
