--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="current_time_text">#666666</color>
     <color name="selected_time_text">#57C5E8</color>
 
+    <color name="background_color">#FCF5F5</color>
 </resources>
