--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,5 @@
     <dimen name="date_unit_text_size">18sp</dimen>
     <dimen name="remove_circle_width">50dp</dimen>
     <dimen name="remove_circle_height">50dp</dimen>
+    <dimen name="version_label_text_size">20dp</dimen>
 </resources>
