--- a/app/src/main/res/layout/history_bill_item.xml
+++ b/app/src/main/res/layout/history_bill_item.xml
@@ -8,7 +8,7 @@
             android:layout_width="match_parent"
             android:layout_height="41dp"
             android:layout_marginLeft="20dp"
-            android:background="@drawable/border_bottom">
+            android:background="@color/background_color">
         <TextView
                 android:id="@+id/bill_item_consumptionDate"
                 android:layout_width="0dp"
@@ -43,6 +43,11 @@
                 android:textColor="@color/select_title_text"
                 android:text="元"/>
     </LinearLayout>
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:layout_marginLeft="20dp"
+            android:background="@drawable/border_bottom"/>
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
