--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,5 @@
     <dimen name="remove_circle_width">50dp</dimen>
     <dimen name="remove_circle_height">50dp</dimen>
     <dimen name="version_label_text_size">20dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
