--- a/app/src/main/res/layout/qr_dialog.xml
+++ b/app/src/main/res/layout/qr_dialog.xml
@@ -10,6 +10,7 @@
                 android:layout_marginTop="30dp"
                 android:layout_gravity="center"/>
         <TextView
+                android:id="@+id/qr_wifi_name"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:textSize="16dp"
